[package]
name = "honeyheist"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirtytype = "0.5.1"
eframe = "0.24.1"
egui = "0.24.1"
etcetera = "0.8.0"
rand = "0.8.5"
rfd = "0.12.1"
serde = { version = "1.0.193", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
toml = "0.8.8"
